# galvo

./: .gitignore
board/: ESP32 Galvo Driver.kicad_pcb  ESP32 Galvo Driver.kicad_pro  ESP32 Galvo Driver.kicad_sch  ESP32 Galvo Driver.kicad_sym  fp-lib-table  sym-lib-table
board/ESP32 Galvo Driver.pretty/: Nintendo_Wii_Peripheral_5Pin_Card_edge.kicad_mod  QUALTEK_703W-00_52.kicad_mod
chr-text/: Cargo.toml  build.rs
chr-text/src/: lib.rs
galvo-firmware/: Cargo.toml
galvo-firmware/.cargo/: config.toml
galvo-firmware/src/: lasers.rs  led.rs  lib.rs  network.rs  nunchuck.rs  point.rs  protocol.rs  text.rs
galvo-firmware/src/demos/: alphabet.rs  cube.rs  mod.rs
galvo-simulator/: Cargo.toml
galvo-simulator/src/: display.rs  main.rs  painter.rs  point.rs
hershey-text/: Cargo.toml  build.rs
hershey-text/src/: lib.rs
newstroke-text/: Cargo.toml  build.rs
newstroke-text/src/: lib.rs
scripts/: generate-path.py  gtfs.py  host.py  maps.py
vector-apps/: Cargo.toml
vector-apps/src/: lib.rs  point.rs
vector-apps/src/apps/: align.rs  alphabet.rs  asteroids.rs  clock.rs  cube.rs  cycle.rs  ilda.rs  maps.rs  mbta.rs  mbta.txt  mod.rs  roads.txt
vector-apps/src/utils/: colors.rs  ilda.rs  math.rs  mod.rs  text.rs
