[package]
name = "vector-apps"
version = "0.1.0"
edition = "2024"

[dependencies]
libm = "0.2.15"
hershey-text ={ path = "../hershey-text" }
jiff = { version = "0.2.10", default-features = false, features = ["static"] }
itertools = {version = "0.14.0", default-features = false, features = ["use_alloc"]}
